css lenteliu stiliai

--- a/2-css/8-plociai-kita/index.html
+++ b/2-css/8-plociai-kita/index.html
@@ -49,7 +49,7 @@
             }
         </p>
     </div>
-    <table border="1px" id="lentele">
+    <table id="lentele">
         <tr>
             <td>
                 Lorem, ipsum dolor.
@@ -121,5 +121,23 @@
             </p>
         </div>
     </div>
+    <table id="kita-lentele">
+        <tr>
+            <td>
+                Lorem, ipsum.
+            </td>
+            <td>
+                Corrupti, doloribus?
+            </td>
+        </tr>
+        <tr>
+            <td>
+                Lorem, ipsum.
+            </td>
+            <td>
+                Eaque, rem.
+            </td>
+        </tr>
+    </table>
 </body>
 </html>
