CSS sarasu stiliai

--- a/2-css/8-plociai-kita/index.html
+++ b/2-css/8-plociai-kita/index.html
@@ -139,5 +139,35 @@
             </td>
         </tr>
     </table>
+    <ul id="pirmas-sarasas">
+        <li>
+            1textas zodis zodis
+        </li>
+        <li>
+            2textas zodis zodis
+        </li>
+        <li>
+            3textas zodis zodis
+        </li>
+        <li>
+            4textas zodis zodis
+        </li>
+    </ul>
+    <ol id="antras-sarasas">
+        <li>
+            Lorem ipsum dolor sit.
+        </li>
+        <li>
+            Molestias aperiam laboriosam temporibus?
+        </li>
+        <li>
+            Illum minus beatae dolorem.
+        </li>
+    </ol>
+    <div id="devintas">
+        <a href="#">Nuoroda nr 1</a>
+        <a href="#">Nuoroda nr 2</a>
+        <a href="#">Nuoroda nr 3</a>
+    </div>
 </body>
 </html>
