--- a/2-css/8-plociai-kita/index.html
+++ b/2-css/8-plociai-kita/index.html
@@ -169,5 +169,15 @@
         <a href="#">Nuoroda nr 2</a>
         <a href="#">Nuoroda nr 3</a>
     </div>
+    <div id="desimtas">
+        <p>
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Explicabo, aspernatur exercitationem ut itaque repudiandae ipsa maxime labore non sapiente, rerum distinctio nam facere rem ratione temporibus modi, facilis obcaecati architecto.
+        </p>
+    </div>
+    <div id="vienuoliktas">
+        <p>
+            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Culpa alias dignissimos et sequi veritatis, velit fugiat laudantium quibusdam maiores neque impedit optio doloribus explicabo magnam cumque nihil porro, architecto nobis!
+        </p>
+    </div>
 </body>
 </html>
