CSS flex pavyzdziai 1

--- a/2-css/19-uzduotis-prisijungimo-forma/index.html
+++ b/2-css/19-uzduotis-prisijungimo-forma/index.html
@@ -5,19 +5,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Niramit:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
     <div id="frame">
         <img src="images/Vector.jpg" alt="">
-        <p>Thanks to them, the ears can be freely moved in any direction.</p>
-        <h2>Login</h2>
+        <h3>Thanks to them, the ears can be freely moved in any direction.</h3>
+        <h1>Login</h1>
         <form >
             <label for="Email">Email</label><br>
-            <input type="email" id="Email" placeholder="Your email"> <br>
+            <input class="pass" type="email" id="Email" placeholder="Your email"> <br>
 
-            <label for="Password">Email</label><br>
-            <input type="password" id="Password" placeholder="Your password"> <br>
+            <label for="Password">Password</label><br>
+            <input class="pass" type="password" id="Password" placeholder="Your password"> <br>
+            <input class="button" type="button" value="Login">
         </form>
+        <p>Even the slightest sound does not escape this Pokémon’s notice. Azurill’s tail is large and bouncy. It is packed full of the nutrients this Pokémon needs to grow. Azurill can be seen bouncing and playing on its big, rubbery tail. Girafarig’s rear head contains a tiny brain that is too small for thinking. However, the rear head doesn’t need to sleep, so it can keep watch over its surroundings 24 hours a day.</p>
     </div>
     
 </body>
