--- a/5-projektas/Atsiskaitymas-html-css/index.html
+++ b/5-projektas/Atsiskaitymas-html-css/index.html
@@ -28,6 +28,7 @@
                         <a class="nav-link dropdown-toggle" id="neradauselectoriaus" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                           Products
                         </a>
+                        <span></span>
                         <ul class="dropdown-menu">
                           <li><a class="dropdown-item" href="#">Action</a></li>
                           <li><a class="dropdown-item" href="#">Another action</a></li>
@@ -52,11 +53,11 @@
     <div class="carousel-fluid">
         <div class="container">
             <div id="carouselExampleDark" class="carousel carousel-dark slide" data-bs-ride="carousel">
-        <div class="carousel-indicators">
+        <!-- <div class="carousel-indicators">
           <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
           <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="1" aria-label="Slide 2"></button>
           <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="2" aria-label="Slide 3"></button>
-        </div> 
+        </div>  -->
         <div class="carousel-inner">
           <div class="carousel-item active" data-bs-interval="2000">
             <img src="./vendor/images/pirm.jpg" class="d-block w-100" alt="...">
@@ -135,23 +136,58 @@
             <h2>Lorem ipsum dolor sit amet</h2>
             <div class="row">
                 <div class="col-lg-8">
-                    <img src="./vendor/images/gal1.png" alt="">
+                    <img src="./vendor/images/gal1.jpg" alt="">
                     <p>Lorem ipsum dolor sit amet, consectetur</p>
                 </div>
                 <div class="col">
-                    <img src="./vendor/images/gal2.png" alt="">
+                    <img src="./vendor/images/gal2.jpg" alt="">
                     <p>Lorem ipsum dolor</p>
                 </div>
             </div>
             <div class="row">
                 <div class="col-lg-6">
-                    <img src="" alt="">
-                    <p></p>
+                    <img src="vendor/images/gal3.jpg" alt="">
+                    <p>Lorem ipsum</p>
                 </div>
-                <div class="col-lg-6"></div>
+                <div class="col-lg-6" id="last">
+                    <img src="vendor/images/gal4.jpg" alt="">
+                    <p>Lorem ipsum</p>
+                </div>
             </div>
         </div>
     </div>
+    <div class="footer-fluid">
+        <div class="container">
+            <div class="row top">
+                <div class="col stulp1">
+                    <p>Company logo</p>
+                </div>
+                <div class="col-lg-6 stulp2">
+                    <a href="#">Interior</a>
+                    <a href="#">exterior</a>
+                    <a href="#">services</a>
+                    <a href="#">ideas</a>
+                    <a href="#">contacts</a>
+                </div>
+                <div class="col-sm-12 stulp3">
+                    <p>Privacy policy <br>
+                    Cookie policy</p>
+                </div>
+                <div class="col-sm-12 stulp4">
+                    <p>Shopping center <br>
+                        Adress Line <br>
+                        Tel.: +370 000 00000 <br>
+                        info@shoppingcenter.com</p>
+                </div>
+            </div>
+            <div class="row bot">
+                <p>All rights reserved. © 2021 Shopping Center.</p>
+            </div>
+        </div>
+
+    </div>
+
+    </footer>
     <script src="vendor/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
